[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "llmcalibre"
version = "0.1.0"
description = "Offline-first, framework-agnostic LLM evaluation primitives."
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "llmcalibre contributors" }
]
dependencies = []

[project.scripts]
llmcalibre = "llmcalibre.cli:main"

[project.optional-dependencies]
schema = [
    "jsonschema>=4.0",
]
dev = [
    "pytest>=8",
    "ruff>=0.8",
    "mypy>=1.11,<2",
]

[tool.setuptools.packages.find]
include = ["llmcalibre*"]

[tool.ruff]
line-length = 88
target-version = "py39"
exclude = ["env", ".venv", "venv", "build", "dist"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.9"
packages = ["llmcalibre"]
strict = true
warn_return_any = true
warn_unused_configs = true
