[build-system]
requires = ["setuptools>=68,<77"]
build-backend = "setuptools.build_meta"

[project]
name = "llmcalibre"
version = "0.1.0a1"
description = "Offline-first, framework-agnostic LLM evaluation primitives."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [
    { name = "K M Emon Ahmed" }
]
keywords = [
    "llm",
    "evaluation",
    "evals",
    "ai",
    "offline",
    "pytest",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
    "Typing :: Typed",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/kmemonahmed/llmcalibre"
Repository = "https://github.com/kmemonahmed/llmcalibre"
Issues = "https://github.com/kmemonahmed/llmcalibre/issues"

[project.scripts]
llmcalibre = "llmcalibre.cli:main"

[project.optional-dependencies]
schema = [
    "jsonschema>=4.0",
]
nlp = [
    "rouge-score>=0.1.2",
    "sentence-transformers>=3.0",
]
judge = [
    "openai>=1.0",
]
dev = [
    "pytest>=8",
    "ruff>=0.8",
    "mypy>=1.11,<2",
]

[tool.setuptools.packages.find]
include = ["llmcalibre*"]

[tool.setuptools.package-data]
llmcalibre = ["py.typed"]

[tool.ruff]
line-length = 88
target-version = "py39"
exclude = ["env", ".venv", "venv", "build", "dist"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.9"
packages = ["llmcalibre"]
strict = true
warn_return_any = true
warn_unused_configs = true
